# SI

./: .gitignore
.github/workflows/: docker-image.yml
00_misc/: iframething.html  index.html
01_data_files/: assignment.txt  me.csv  me.json  me.xml  me.yaml
03_modules/: index.js  mymodule.js
03_modules/html_no_modules/: index.html  myModule.js
03_modules/html_with_modules/: index.html  index.js  myModule.js
03_modules/node_ec_modules/: index.js  myModule.js
03_modules/python_modules/: main.py
04._Encoding_Decoding/node/: index.js
04._Encoding_Decoding/python/: main.py
05._Python_Environments/01._Virtualenv_Environment/: pyvenv.cfg
05._Python_Environments/03._poetry_environment/: pyvenv.cfg
06._Servers/node/: app.js  package-lock.json  package.json
06._Servers/python/: main.py  pyproject.toml  pyvenv.cfg
06._Servers/python/Scripts/: activate.bat
06._Servers/python/Scripts/activate/: pyvenv.cfg
06._Servers/python/Scripts/activate/Scripts/: activate  activate.bat
08._server_to_server/node/: app.js  package-lock.json  package.json
08._server_to_server/python/: main.py  pyproject.toml  pyvenv.cfg
08._server_to_server/python/Scripts/: activate  activate.bat
09._Environment_Variables/node/: index.js  package.json
09._Environment_Variables/python/: main.py  pyproject.toml  pyvenv.cfg
10._Date/node/: index.js
10._Date/python/: main.py  pyvenv.cfg
16._CORS/: index.html
17._Multipart-Forms/: index.html
18._Images/: index.html
19._Audio/: index.html
20._MPEG_DASH/: about-md  app.js  package-lock.json  package.json
(+184 files in other folders)
