[tool.poetry]
name = "first-server"
version = "0.1.0"
description = "my first python server"
authors = ["Bjørn <bjand49@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
